# TWStockAnalysis-RawData

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/tw_stock_rawdata/: config.py  db.py  db_utils.py  prepare.py  run.py  sources.py
tests/: conftest.py
tests/unit/: test_dahu.py  test_db_utils_prev_margin.py  test_db_utils_upsert_raw.py  test_margin_retry.py  test_retry_on_transient.py  test_run_refresh_prev_margin.py  test_run_stock_sources.py  test_sources_parsing.py  test_twse_pacing.py
